[metadata]
name = NEURON
description = Empirically-based simulator for modeling neurons and networks of neurons
author = Michael Hines, Yale, Blue Brain Project
author_email = michael.hines@yale.edu
license = Copyright (c) Michael Hines (BSD compatible)
url = https://neuron.yale.edu/neuron/
project_urls =
    Source = https://github.com/neuronsimulator/nrn
# maintainer is the field chosen for docs `contributors`
maintainer = Michael Hines
long_description = file: README.md
long_description_content_type = text/markdown

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Programming Language :: C++
    Programming Language :: Python
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
formats = bdist_wheel

[aliases]
test = pytest

[flake8]
ignore = D203, E241, E226, E128, E124, E731
exclude = 3rdparty, .eggs, .tox, build, docs, include, venv
max-complexity = 10
max-line-length = 90
